--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "chart.js": "^4.2.0",
         "sweetalert2": "^11.7.0"
     }
 }
